refactor: User / Admin 명시 및 컨트롤러 역할 재분배