@@ -1,23 +1,26 @@
 package roomescape.theme.controller;
 
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 import roomescape.theme.controller.dto.ThemeResponse;
 import roomescape.theme.service.ThemeService;
+import roomescape.time.controller.dto.ReservationTimeResponse;
+import roomescape.time.service.ReservationTimeService;
 
+import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/themes")
 public class UserThemeController {
 
     private final ThemeService themeService;
+    private final ReservationTimeService reservationTimeService;
 
-    public UserThemeController(ThemeService themeService) {
+    public UserThemeController(ThemeService themeService, ReservationTimeService reservationTimeService) {
         this.themeService = themeService;
+        this.reservationTimeService = reservationTimeService;
     }
 
     @GetMapping
@@ -25,7 +28,7 @@ public class UserThemeController {
         List<ThemeResponse> responses = themeService.findAll()
                 .stream()
                 .map(ThemeResponse::from)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(responses);
     }
 
@@ -34,7 +37,20 @@ public class UserThemeController {
         List<ThemeResponse> responses = themeService.findPopularThemes()
                 .stream()
                 .map(ThemeResponse::from)
-                .collect(Collectors.toList());
+                .toList();
+        return ResponseEntity.ok(responses);
+    }
+
+    @GetMapping("/{themeId}/available-times")
+    public ResponseEntity<List<ReservationTimeResponse>> readAvailable(
+            @PathVariable Long themeId,
+            @RequestParam("date") @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate date
+    ) {
+        List<ReservationTimeResponse> responses =
+                reservationTimeService.findAvailableTimes(themeId, date)
+                        .stream()
+                        .map(ReservationTimeResponse::from)
+                        .toList();
         return ResponseEntity.ok(responses);
     }
 }
